--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,7 +19,7 @@
          xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          id="ONOS" version="2.5">
-    <display-name>Sample App REST API v1.0</display-name>
+    <display-name> Telemetry-Braine REST API</display-name>
 
     <security-constraint>
         <web-resource-collection>
@@ -47,7 +47,7 @@
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>javax.ws.rs.Application</param-name>
-            <param-value>org.TelemetryBraine.app.rest.AppWebApplication</param-value>
+            <param-value>org.TelemetryBraine.app.rest.IntWebApplication</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
